--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=demo/" />
     <title>firefly-name-select</title>
+    <script type="module">
+    import "./firefly-name-select.js"
+    </script>
+
   </head>
   <body>
     <!--
@@ -12,5 +15,12 @@
         This page will automatically redirect you there when run in the browser
         with `polymer serve`.
       -->
+
+      <firefly-name-select>
+        Hello
+
+      </firefly-name-select>
+
+      
   </body>
 </html>
